fixed a bug in URL construction